--- a/abangan_lab1/templates/ProfilePage.html
+++ b/abangan_lab1/templates/ProfilePage.html
@@ -4,7 +4,7 @@
 {% block header %}Profile{% endblock header %}
 {% block content %}
     <center>
-        <img src="{% static '' %}" style="width:100px;height:100px">
+        <img src="{% static 'profilepicture.jpg' %}" style="width:100px;height:100px">
         <p>This is you {{ UserName }}! Recorded to have been born at least once, congratulations!</p>
         <p>Research finds that you have also been seen viewing this page!</p>
     </center>
